@@ -363,6 +363,19 @@ Ant's "legacy" datatypes have been modified to behave as Resource Collections:
   preserving the order of nested collections as well as
   duplicate resources (contrast with <a href="#union">union</a>).
 </p>
+<blockquote>
+  <table border="1" cellpadding="2" cellspacing="0">
+    <tr>
+      <td valign="top"><b>Attribute</b></td>
+      <td valign="top"><b>Description</b></td>
+      <td align="center" valign="top"><b>Required</b></td>
+    </tr>
+    <tr>
+      <td valign="top">cache</td>
+      <td valign="top">Whether to cache results</td>
+      <td valign="top" align="center">No, default <i>false</i></td>
+    </tr>
+  </table>
 
 <h4><a name="files">files</a></h4>
 <p>A group of files. These files are matched by <b>absolute</b> patterns
